--- a/package.json
+++ b/package.json
@@ -120,8 +120,10 @@
     "@angular/platform-browser": "2.0.0-rc.4",
     "@angular/platform-browser-dynamic": "2.0.0-rc.4",
     "@angular/router": "3.0.0-beta.2",
-    "es6-module-loader": "^0.17.8",
     "core-js": "^2.4.0",
+    "d3": "^4.2.6",
+    "es6-module-loader": "^0.17.8",
+    "leaflet": "^1.0.1",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.27",
     "zone.js": "^0.6.12"
